# discord-message-template

./: Cargo.toml
.github/workflows/: release.yml  releases.yaml
src/: lib.rs
src/base/: discord_message.rs  mod.rs  template.rs  url_builder.rs
src/github/: event_kind.rs  github_template.rs  github_types.rs  message_template.rs  mod.rs
src/template/: event_data.rs  event_kind.rs  message_template.rs  mod.rs
